--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,11 @@ env_logger = "0.8.2"
 actix-web = "3"
 url = "2.2.0"
 actix-cors = "0.5.3"
+actix-web-httpauth = "0.5.0"
+alcoholic_jwt = "1.0.0"
+dotenv = "0.15.0"
+serde = "1.0.118"
+derive_more = "0.99.11"
+reqwest = { version = "0.10.9", features = ["json"] }
+serde_json = "1.0.60"
+serde_derive = "1.0.118"
